--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./public/icon.svg" />
+  <link rel="icon" type="image/svg+xml" href="./public/icon.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Create a React app with Vite and Tailwind CSS.</title>
+  <title>Pokemon Meta</title>
 </head>
 
 <body class="antialiased font-sans">
